change hamburger menu colour & fix hero text size issues & fix portfolio image cropping

--- a/portfolio.scss
+++ b/portfolio.scss
@@ -51,7 +51,7 @@ nav {
     display: block;
     padding: 10px 30px 10px 5px;
     text-decoration: none;
-    background: rgba(100, 100, 150, 0.9);
+    background: #2b2d42;
   }
   a:hover,
   nav a:focus {
@@ -145,8 +145,8 @@ nav {
     width: 100%;
     height: 120px;
     text-align: center;
-    margin: 1.3em 0px;
-    font-size: 70px;
+    margin: 1em 0px;
+    font-size: 4em;
     text-shadow: 1px 1px 1px #000;
   }
   blockquote {
@@ -156,6 +156,7 @@ nav {
     position: relative;
     font-family: Georgia, serif;
     line-height: 1.2;
+    font-size: 1em;
     color: #eee;
     background-color: rgba(0, 0, 0, 0.8);
     border-left: 10px solid #aaa;
@@ -304,7 +305,7 @@ nav {
     box-shadow: 0 3px 7px -1px rgba(#000, 0.1);
     margin-bottom: 1.6%;
     background: $color_white;
-    line-height: 1.4;
+    line-height: 1.3;
     font-family: sans-serif;
     border-radius: 5px;
     overflow: hidden;
